--- a/css/style12.css
+++ b/css/style12.css
@@ -1,10 +1,28 @@
+#slider{
+	width: 384px;
+	height: 128px;
+	border: 5px solid black;
+	margin: 50px auto;
+	overflow: hidden;
+}
+
+#polosa{
+	/*background-color: red;*/
+	width: 896px;
+	position: relative;
+	left: 0;
+	transition: all ease 1s;
+}
+
+#polosa img{
+	float: left;
+}
+
+#polosa::after{
+	content: "";
+	display: block;
+	clear:both;
+}
 h1{
-	color: rgba(164,179,87,1);
-	color: -moz-linear-gradient(left, rgba(164,179,87,1) 0%, rgba(117,137,12,1) 100%);
-	color: -webkit-gradient(left top, right top, color-stop(0%, rgba(164,179,87,1)), color-stop(100%, rgba(117,137,12,1)));
-	color: -webkit-linear-gradient(left, rgba(164,179,87,1) 0%, rgba(117,137,12,1) 100%);
-	color: -o-linear-gradient(left, rgba(164,179,87,1) 0%, rgba(117,137,12,1) 100%);
-	color: -ms-linear-gradient(left, rgba(164,179,87,1) 0%, rgba(117,137,12,1) 100%);
-	color: linear-gradient(to right, rgba(164,179,87,1) 0%, rgba(117,137,12,1) 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a4b357', endColorstr='#75890c', GradientType=1 );
+	color: rgba(20, 89, 255, 0.7);	
 }
